fixed build error